[metadata]
name = blogpipe
version = 0.1.0
description = Blog pipeline for anshu92.github.io

[options]
# Explicit list so the wheel always includes the package (no discovery surprises in CI)
packages =
    blogpipe
    blogpipe.sources
    blogpipe.analysts
    blogpipe.graph
python_requires = >=3.9
install_requires =
    httpx>=0.27
    feedparser>=6.0.11
    pydantic>=2.6
    python-dateutil>=2.9
    jinja2>=3.1
    openai>=1.0
    pyyaml>=6.0
    markdown-it-py>=3.0
    numpy>=1.26
    bashlex>=0.16
    Pillow>=10.0
    defusedxml>=0.7
    google-genai>=0.2
    pypdf>=4.2
    # LangGraph: orchestration only; LLM calls stay in blogpipe.llm_chain (not LangChain model adapters).
    langgraph>=0.2,<0.4
    langchain-core>=0.3,<0.4

[options.entry_points]
console_scripts =
    blogpipe = blogpipe.cli:main
