[metadata]
name = blogpipe
version = 0.2.0
description = Blog pipeline for anshu92.github.io

[options]
# Explicit list so the wheel always includes the package (no discovery surprises in CI)
packages =
    blogpipe
    blogpipe.curriculum
    blogpipe.sources
include_package_data = True
python_requires = >=3.9
install_requires =
    httpx>=0.27
    feedparser>=6.0.11
    pydantic>=2.6
    python-dateutil>=2.9
    jinja2>=3.1
    pyyaml>=6.0
    markdown-it-py>=3.0
    trafilatura>=1.9

[options.entry_points]
console_scripts =
    blogpipe = blogpipe.cli:main

[options.package_data]
blogpipe.curriculum =
    *.yaml
